# norpc

./: .gitignore  Architecture.html  Cargo.toml  Compiler.html  LICENSE  Motivation.html  README.md  Runtime.html  architecture.html  book.toml  compiler.html  example.html  index.html  message-passsing.html  motivation.html  norpc.html  previous-work.html  print.html  runtime.html  tarpc.html
.github/workflows/: ci.yml
benchmark/noop/: Cargo.toml  build.rs  noop.norpc
benchmark/noop-raw/: Cargo.toml
benchmark/noop-raw/benches/: noop_raw.rs
benchmark/noop-tarpc/: Cargo.toml
benchmark/noop-tarpc/benches/: noop_tarpc.rs
benchmark/noop/benches/: noop.rs
book/: book.toml
book/src/: Motivation.md  SUMMARY.md  architecture.md  compiler.md  example.md  message-passsing.md  previous-work.md  runtime.md  tarpc.md
debug/: Cargo.toml
debug/src/: main.rs
example/: Cargo.toml  build.rs  hello_world.norpc
example/concurrency/: Cargo.toml
example/concurrency/tests/: concurrency.rs
example/concurrent-message/: Cargo.toml  build.rs  concurrent_message.norpc
example/concurrent-message/tests/: concurrent_message.rs
example/hello-world/: Cargo.toml  README.md  build.rs  hello_world.norpc
example/hello-world-no-send/: Cargo.toml
example/hello-world-no-send/tests/: hello_world_no_send.rs
example/hello-world/tests/: hello_world.rs
example/hello_world/: Cargo.toml
example/hello_world/tests/: hello_world.rs
example/kvstore/: Cargo.toml  build.rs  kvstore.norpc
example/kvstore/tests/: kvstore.rs
example/rate-limit/: Cargo.toml  build.rs  rate_limit.norpc
example/rate-limit/tests/: rate-limit.rs  rate_limit.rs
example/src/: async_std_runtime.rs  client_drop.rs  concurrency.rs  hello_world.rs  kvstore.rs  lib.rs  main.rs  panic.rs  rate_limit.rs
example/streaming/: Cargo.toml
example/streaming/tests/: streaming.rs
examples/: Cargo.toml
examples/src/: client_drop.rs  concurrency.rs  hello_world.rs  lib.rs  no_runtime.rs  rate_limit.rs
norpc/: Cargo.toml
norpc-book/: Architecture.md  Compiler.md  Motivation.md  Runtime.md  SUMMARY.md
norpc-codegen/: Cargo.toml
norpc-macros/: Cargo.toml
norpc-macros/src/: generator.rs  lib.rs
norpc/src/: build.rs  lib.rs  no_send.rs
norpc/src/compiler/: generator.rs  mod.rs  parser.rs
norpc/src/runtime/: async_std.rs  mod.rs  no_send.rs  send.rs  tokio.rs
