[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tower-service = "*"
tower = { version = "*", features = ["full"] }

norpc = { path = "../norpc" }

[build-dependencies]
norpc = { path = "../norpc" }