[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
async-std = { version = "*" }
tower = { version = "*", features = ["full"] }
futures = "*"
rand = "0.8"

norpc = { path = "../norpc", features = ["runtime", "tokio-executor", "async-std-executor"] }