[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
norpc = { path = "../norpc", features = ["runtime", "tokio-executor", "async-std-executor"] }

async-std = { version = "*" }
futures = "*"
rand = "0.8"
tokio = { version = "*", features = ["full"] }
tower = { version = "*", features = ["full"] }