[package]
name = "norpc-macros"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
version = "0.6.1"
edition = "2021"
license = "MIT"
description = "Code generator for norpc"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
quote = "1"
itertools = "0.10"