[package]
name = "norpc"
version = "0.5.1"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Framework for in-process microservices"
repository = "https://github.com/akiradeveloper/norpc"
readme = "../README.md"
categories = ["concurrency"]
keywords = ["rpc", "microservices", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "rt"] }
tower-service = "0.3"
async-trait = "0.1"
futures = "0.3"
thiserror = "1"

norpc-macros = { path = "../norpc-macros", version = "0.5.1" }