[package]
name = "noop-tarpc"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = { version = "0.27", features = ["tokio1"] }
tokio = { version = "*", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }

[[bench]]
name = "noop_tarpc"
harness = false