[package]
name = "streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tower = { version = "*", features = ["full"] }
futures = "0.3"

norpc = { path = "../../norpc" }